Add unit test for priceState formatter

--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -49,6 +49,7 @@
 									formatter: '.formatter.numberUnit'
 								}"
 								unit="{Currency}"
+								state="Error"
 								/>
 						</cells>
 					</ColumnListItem>
