Add priceState formatter

--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -49,7 +49,10 @@
 									formatter: '.formatter.numberUnit'
 								}"
 								unit="{Currency}"
-								state="Error"
+								state="{
+									path: 'Price',
+									formatter: '.formatter.priceState'
+								}"
 								/>
 						</cells>
 					</ColumnListItem>
