Add detail tabs on post page

--- a/webapp/view/Post.view.xml
+++ b/webapp/view/Post.view.xml
@@ -2,6 +2,7 @@
     controllerName="sap.ui.demo.bulletinboard.controller.Post"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc"
+    xmlns:form="sap.ui.layout.form"
     xmlns:semantic="sap.m.semantic">
     <semantic:FullscreenPage
         id="page"
@@ -21,6 +22,26 @@
                  numberUnit="{Currency}"
                  backgroundDesign="Translucent">
             </ObjectHeader>
+
+            <IconTabBar id="iconTabBar" expanded="{device>/isNoPhone}" class="sapUiNoContentPadding">
+                <items>
+                    <IconTabFilter icon="sap-icon://hint" key="hint">
+                        <form:SimpleForm>
+                            <form:content>
+                                <Label text="{i18n>postDateLabel}" />
+                                <Text text="{Timestamp}" />
+
+                                <Label text="{i18n>postDescriptionLabel}" />
+                                <Text text="{Description}" />
+                            </form:content>
+                        </form:SimpleForm>
+                    </IconTabFilter>
+
+                    <IconTabFilter icon="sap-icon://inspection" key="statistics">
+                        <Text text="Viewed 420 times" id="viewCounter" />
+                    </IconTabFilter>
+                </items>
+            </IconTabBar>
         </semantic:content>
     </semantic:FullscreenPage>
 </mvc:View>
